THRIFT-3768 fix TThreadedServer refactoring issues with client lifetime guarantees